# coral-seeker

./: .gitignore  README.md  detect_corals.py  generate_dataset.py  generate_dataset_old.py  harness.py  model.py  process_images.py  pyproject.toml  requirements.txt
