[tool.poetry]
name = "coral-detection"
version = "0.1.0"
description = ""
authors = ["Vincent Tiu <46623413+vincetiu8@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
canaro = "^1.1.0"
opencv-python = "^4.7.0.68"
Cython = "^0.29.32"
scipy = "^1.10.0"
scikit-learn = "^1.2.0"
beautifulsoup4 = "^4.11.1"
requests-html = "^0.10.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

